# Uni-Sign-LIS

./: .gitignore  LIS_output_eval_stage_3.txt  LIS_output_stage_1.txt  LIS_output_stage_3.txt  README.md  SLRT_metrics.py  conda_requirements.txt  config.py  crop.py  datasets.py  deformable_attention_2d.py  fine_tuning.py  info.md  json_generator.py  models.py  online_inference.py  pose_extraction_mio.ipynb  pre_training.py  pre_training_v2.py  pre_training_v3.py  pyproject.toml  requirements.txt  temp.json  test_LIS_output_stage_2.txt  utils.py
dataset/LIS/data/: LIS_Labels.json
dataset/LIS/pose_format/: 12_10_2023_0.pkl  12_10_2023_47.pkl
external_metrics/: Rouge.py  sacrebleu.py
script/: LIS_eval.sh  LIS_eval_stage3.bat  LIS_stage1.bat  LIS_stage1.sh  LIS_stage2.bat  LIS_stage3.bat  move_data.sh  move_data_scp.sh  train_stage1.sh  train_stage2.sh  train_stage3.sh
script/slurm/: launch_experiment  launch_experiment_exe  launch_test  launch_test_exe
