[project]
name = "uni-sign-lis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.29.2",
    "decord==0.6.0",
    "deepspeed==0.16.3",
    "einops==0.6.1",
    "ipykernel>=6.29.5",
    "matplotlib==3.4.3",
    "numpy==1.22.4",
    "opencv-python==4.6.0.66",
    "pandas==1.3.5",
    "rich==13.7.1",
    "rouge==1.0.1",
    "sacrebleu==2.2.0",
    "scikit-image==0.19.3",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "seaborn==0.12.1",
    "sentencepiece==0.1.97",
    "tensorboard==2.9.1",
    "tensorflow==2.9.1",
    "timm==0.8.10.dev0",
    "tokenizers==0.19.1",
    "torch==2.1.1",
    "torchaudio==2.1.1",
    "torchvision==0.16.1",
    "tqdm==4.65.0",
    "transformers==4.40.0",
]
