[project]
name = "uni-sign-lis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.29.2",
    "coverage>=7.9.1",
    "decord==0.6.0",
    "deepspeed==0.16.3",
    "einops==0.6.1",
    "flake8>=7.3.0",
    "interrogate>=1.7.0",
    "ipykernel>=6.29.5",
    "isort==4.3.21",
    "json-tricks>=3.17.3",
    "matplotlib==3.4.3",
    "munkres>=1.1.4",
    "numpy==1.22.4",
    "onnxruntime>=1.22.0",
    "opencv-python==4.6.0.66",
    "openmim>=0.3.9",
    "pandas==1.3.5",
    "parameterized>=0.9.0",
    "pillow>=11.2.1",
    "pytest>=8.4.1",
    "pytest-runner>=6.0.1",
    "requests>=2.32.4",
    "rich==13.7.1",
    "rouge==1.0.1",
    "rtmlib>=0.0.13",
    "sacrebleu==2.2.0",
    "scikit-image==0.19.3",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "seaborn==0.12.1",
    "sentencepiece==0.1.97",
    "tensorboard==2.9.1",
    "tensorflow==2.9.1",
    "timm==0.8.10.dev0",
    "tokenizers==0.19.1",
    "torch>=1.8",
    "torchaudio==2.1.1",
    "torchvision==0.16.1",
    "tqdm==4.65.0",
    "transformers==4.40.0",
    "wheel>=0.45.1",
    "xdoctest>=0.10.0",
    "xtcocotools>=1.12",
    "yapf>=0.43.0",
]
